--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 }
 
 :root {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
 }
 
@@ -68,6 +70,7 @@ a {
   color: inherit;
 }
 
+/* main content container styles */
 .main-content {
   height: 100vh;
 
@@ -75,6 +78,7 @@ a {
   flex-direction: column;
 }
 
+/* styles for specific sections */
 section {
   flex: 1;
 }
@@ -83,6 +87,7 @@ section:nth-child(odd) {
   background-color: rgba(230, 230, 230, 0.5);
 }
 
+/* top section styles */
 .info-container {
   display: flex;
   flex-direction: column;
@@ -90,9 +95,60 @@ section:nth-child(odd) {
 
   font-size: 1.5rem;
   font-weight: bold;
-  font-family: sans-serif;
 }
 
 .info-container span {
   margin-left: 32px;
+}
+
+/* form styles */
+section:nth-child(2) {
+  padding: 0px 32px 0px;
+  box-shadow: 4px 4px 8px #a5a5a5;
+}
+
+.form-container h2 {
+  margin: 24px 0px 32px;
+}
+
+input,
+label,
+button {
+  font-family: inherit;
+  font-size: inherit;
+  width: 300px;
+}
+
+label {
+  font-size: 0.8rem;
+  font-weight: bold;
+  letter-spacing: 1.5px;
+}
+
+input {
+  height: 30px;
+  padding: 4px 8px;
+  border: 1px solid #e5e7eb;
+  border-radius: 4px;
+}
+
+form {
+  width: 624px;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+form > div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2px;
+}
+
+input:focus-visible {
+  outline: none;
+  border-color: blue;
+  box-shadow: 2px 2px 8px #b5b5b5;
 }
