--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
+  font-weight: 600;
 }
 
 .image-sidebar {
@@ -116,12 +117,12 @@ label,
 button {
   font-family: inherit;
   font-size: inherit;
+  font-weight: inherit;
   width: 300px;
 }
 
 label {
   font-size: 0.8rem;
-  font-weight: bold;
   letter-spacing: 1.5px;
 }
 
@@ -151,4 +152,41 @@ input:focus-visible {
   outline: none;
   border-color: blue;
   box-shadow: 2px 2px 8px #b5b5b5;
+}
+
+/* buttons section */
+button {
+  display: block;
+
+  width: 200px;
+  height: 50px;
+
+  margin: 32px;
+  padding: 12px 24px;
+
+  background-color: #596d48;
+
+  border: none;
+  border-radius: 8px;
+
+  box-shadow: 1px 1px 4px #b5b5b5;
+
+  color: white;
+  font-weight: bold;
+
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #6e7e60;
+}
+
+.buttons-container p {
+  margin: 32px;
+}
+
+.buttons-container a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #596d48;
 }
