Enhance password validation
- Tell the user as he types what he needs to add to his password in
  order for it to be valid.

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,11 @@ input:valid:not(:placeholder-shown) {
   border-color: green;
 }
 
+input + span {
+  color: red;
+  font-size: 0.7rem;
+}
+
 form {
   width: 624px;
 
